# damaged_grain_detector

./: README.md
code/: configs.py  utils.py
code/data/: aug_sandbox.py  clean.py  preprocess.py
code/markup/: generate_data_for_markup.py
code/models/: models.py  save_params.py
code/production/: InferencePerformer.h  calibration_cache.py  evaluate.py  net_run.py
code/production/IoU/: CMakeLists.txt
code/training/: train.py  train_GAN.py
grain/: configs.py  utils.py
grain/data/: aug_sandbox.py  clean.py  data.py  finetune_masks.py  preprocess.py  quarter.py
grain/markup/: generate_data_for_markup.py
grain/models/: save_params.py
grain/production/: InferencePerformer.cpp  calibration_cache.py  evaluate.py  net_run.py
grain/production/IoU/: IoU.cpp
grain/production/onnx_trt/: CMakeLists.txt
grain/training/: train.py  train_GAN.py
tensorrt-inference/: .inference.cpp.swp  calibration_cache.py  onnx_to_tensorrt.py
tensorrt-inference/IoU/: CMakeLists.txt  IoU.cpp
tensorrt-inference/inference/: CMakeLists.txt  inference.cpp
tensorrt-inference/inference_cpp/: CMakeLists.txt  inference.cpp
tensorrt-inference/inference_py/: inference.py
tensorrt-inference/inference_visual/: inference.cpp
tensorrt-inference/onnx_trt/: convert.cpp
tensorrt-inference/run/: CMakeLists.txt  run.cpp
training/: aug_sandbox.py  clean.py  configs.py  data.py  evaluate.py  file_handler.py  finetune_masks.py  list_convert.py  models.py  net_run.py  net_test.py  preprocess.py  processing.py  restore_params.py  save_params.py  train.py  train_GAN.py  utils.py
(+7 files in other folders)
